# mcp-tool-calling-chatbot

db-mcp-server/: HELP.md  build.gradle  settings.gradle
db-mcp-server/src/main/java/dev/ziriuz/mcp/: DatabaseRetrievalMcpServer.java
db-mcp-server/src/main/java/dev/ziriuz/mcp/config/: ApplicationConfig.java  ModelContextProtocolClientConfig.java  ModelContextProtocolServerConfig.java
db-mcp-server/src/main/java/dev/ziriuz/mcp/services/: DatabaseChatService.java
db-mcp-server/src/main/java/dev/ziriuz/mcp/tools/: ConversationalResponse.java  DatabaseRetrievalTools.java
db-mcp-server/src/main/resources/: application-gpu.yaml  application.properties  application.yaml
db-mcp-server/src/test/java/dev/ziriuz/mcp/: SpringAiDemoApplicationTests.java
tool_runner_ui/: README.md  llm_chat_agent.py  llm_chat_app.py  logger.py  mcp_tool_client.py  models.py  prompt_templates.py  pyproject.toml  requirements.txt  sql_executor_agent.py  sqllite_datasource.py  test_llm_chat_agent.py  tools.py
tool_runner_ui/.streamlit/: config.toml  secrets.toml
tool_runner_ui/data/: test-hr.db  test-orders.db
