[project]
name = "tool-runner-ui"
version = "0.1.0"
description = "Streamlit-based GUI for chatting with local LLM using tool-calling workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sergei Pak"},
]
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.46.0",
    "langchain-community>=0.3.25",
    "langgraph>=0.4.8",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.24",
    "mcp>=1.9.4",
    "tabulate>=0.9.0",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# UV specific configuration
package = false
